# tiny-cnn

./: CMakeLists.txt
af_tiny_cnn/: activation_function.h  af_network.h  af_tiny_cnn.h  af_util.h  average_pooling_layer.h  convolutional_layer.h  dropout.h  fully_connected_layer.h  input_layer.h  layer.h  loss_function.h  max_pooling_layer.h  mnist_parser.h  network.h  optimizer.h  partial_connected_layer.h  tiny_cnn.h  util.h  weight_init.h
test/: picotest.h
